--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.16.0",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.21.1",
+    "sass": "^1.79.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
